--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
 </head>
 
 <body>
-    <div>
+    <div style="display:flex; justify-content:space-around">
         <div>
             <h1>登入：</h1>
             <div class="btn">
-                <a href="./login/login2.html">樣式一</a>
+                <a href="./login/login2.html">樣式一 - yellow</a>
             </div>
-            <div class="btn">
+            <!-- <div class="btn">
                 <a href="./login/login3.html">樣式二</a>
-            </div>
+            </div> -->
             <div class="btn">
-                <a href="./login/login4.html">樣式三</a>
+                <a href="./login/login4.html">樣式二 - purple</a>
             </div>
-            <div class="btn">
+            <!-- <div class="btn">
                 <a href="./login/login5.html">樣式四</a>
-            </div>
+            </div> -->
             <!-- <div class="btn">
                 <a href="./login/login5.html">樣式五</a>
             </div> -->
@@ -69,7 +69,19 @@
                 <a href="./booking/main3.html">樣式二</a>
             </div>
             <div class="btn">
-                <a href="./booking/main4.html">樣式二</a>
+                <a href="./booking/main4.html">樣式三</a>
+            </div>
+        </div>
+        <div>
+            <h1>黃色版日曆：</h1>
+            <div class="btn">
+                <a href="./booking/main5.html">樣式一</a>
+            </div>
+            <div class="btn">
+                <a href="./booking/main6.html">樣式二</a>
+            </div>
+            <div class="btn">
+                <a href="./booking/main7.html">樣式三</a>
             </div>
         </div>
     </div>
